新增几个工具

--- a/tools/pdf-watermark.html
+++ b/tools/pdf-watermark.html
@@ -841,8 +841,8 @@
         <div class="container">
             <p>&copy; 2025 PDF水印处理工具 - 专业的在线PDF水印添加和移除工具</p>
             <div class="footer-links">
-                <a href="mailto:support@xiaolu.page">技术支持</a>
-                <a href="mailto:feedback@xiaolu.page">问题反馈</a>
+                <a href="https://t.zsxq.com/17wTksRxX" style="color: var(--primary); text-decoration: none; margin-right: 1rem; transition: var(--transition);" onmouseover="this.style.color='var(--secondary)'" onmouseout="this.style.color='var(--primary)'">技术支持</a>
+            <a href="https://t.zsxq.com/17wTksRxX" style="color: var(--primary); text-decoration: none; transition: var(--transition);" onmouseover="this.style.color='var(--secondary)'" onmouseout="this.style.color='var(--primary)'">问题反馈</a>
                 <a href="../index.html">返回首页</a>
             </div>
         </div>
