--- a/tools/file-encryptor.html
+++ b/tools/file-encryptor.html
@@ -773,8 +773,8 @@
     <footer>
         <div class="footer-content">
             <div class="footer-links">
-                <a href="mailto:support@xiaolu.com">技术支持</a>
-                <a href="mailto:feedback@xiaolu.com">问题反馈</a>
+                <a href="https://t.zsxq.com/17wTksRxX" style="color: var(--primary); text-decoration: none; margin-right: 1rem; transition: var(--transition);" onmouseover="this.style.color='var(--secondary)'" onmouseout="this.style.color='var(--primary)'">技术支持</a>
+            <a href="https://t.zsxq.com/17wTksRxX" style="color: var(--primary); text-decoration: none; transition: var(--transition);" onmouseover="this.style.color='var(--secondary)'" onmouseout="this.style.color='var(--primary)'">问题反馈</a>
             </div>
             <p>&copy; 2025 小路工具箱. 保留所有权利.</p>
         </div>
