优化统一导航栏和页脚，增加首页的工具分类标签

--- a/tools/example-tool.html
+++ b/tools/example-tool.html
@@ -21,6 +21,10 @@
             line-height: 1.6;
         }
     </style>
+
+    <!-- 导航栏和页脚组件 -->
+    <script src="../components/navbar.js"></script>
+    <script src="../components/footer.js"></script>
 </head>
 <body>
     <div class="tool-container">
