增加新工具，表情包大全

--- a/category-demo.html
+++ b/category-demo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>工具分类管理演示 - 小鹿工具箱</title>
+    <title>工具分类管理演示 - 小路工具箱</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/category-styles.css">
     <style>
@@ -182,7 +182,7 @@
     <div class="container">
         <div class="header">
             <h1><i class="fas fa-layer-group"></i> 工具分类管理系统</h1>
-            <p>为小鹿工具箱设计的智能分类系统，支持多分类筛选、搜索和统计功能</p>
+            <p>为小路工具箱设计的智能分类系统，支持多分类筛选、搜索和统计功能</p>
         </div>
         
         <div class="demo-section">
