增加新工具，优化导航栏和页脚的导入方式

--- a/tools/anime-to-sketch.html
+++ b/tools/anime-to-sketch.html
@@ -2,6 +2,10 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <!-- 导航栏和页脚组件 -->
+    <script src="../components/navbar.js"></script>
+    <script src="../components/footer.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>动漫图片转铅笔线稿工具 - 小路工具箱</title>
     <meta name="description" content="免费在线动漫图片转铅笔线稿工具，支持JPG、PNG等格式，一键生成人物轮廓线稿，适合儿童涂色使用，简洁易用的界面设计">
@@ -1605,6 +1609,21 @@
                 }
             });
         });
+    </script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // 初始化导航栏和页脚组件
+            const navbar = new NavbarComponent();
+            const navbarStyles = document.createElement('style');
+            navbarStyles.textContent = NavbarComponent.getStyles();
+            document.head.appendChild(navbarStyles);
+
+            const footer = new FooterComponent();
+            const footerStyles = document.createElement('style');
+            footerStyles.textContent = FooterComponent.getStyles();
+            document.head.appendChild(footerStyles);
+});
     </script>
 </body>
 </html>
