--- a/tools/watermark-remover.html
+++ b/tools/watermark-remover.html
@@ -2,6 +2,10 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <!-- 导航栏和页脚组件 -->
+    <script src="../components/navbar.js"></script>
+    <script src="../components/footer.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>图片水印去除工具 - 智能AI水印清除器 | 小路工具箱</title>
     <meta name="description" content="专业的在线图片水印去除工具，支持AI智能检测和手动选择水印区域，一键清除各种水印。支持JPG、PNG、WEBP等多种格式，完全免费使用。">
@@ -687,6 +691,17 @@
         
         // 初始化
         document.addEventListener('DOMContentLoaded', function() {
+            // 初始化导航栏和页脚组件
+            const navbar = new NavbarComponent();
+            const navbarStyles = document.createElement('style');
+            navbarStyles.textContent = NavbarComponent.getStyles();
+            document.head.appendChild(navbarStyles);
+
+            const footer = new FooterComponent();
+            const footerStyles = document.createElement('style');
+            footerStyles.textContent = FooterComponent.getStyles();
+            document.head.appendChild(footerStyles);
+
             initializeEventListeners();
             initializeSettings();
         });
