增加新工具，bmi，节日倒计时

--- a/tools/template.html
+++ b/tools/template.html
@@ -8,6 +8,12 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <!-- Favicon and Icons -->
+    <link rel="icon" type="image/svg+xml" href="../images/icon-192x192.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="../images/icon-192x192.png">
+    <link rel="apple-touch-icon" sizes="512x512" href="../images/icon-512x512.png">
+    <link rel="manifest" href="../site.webmanifest">
+    
     <!-- 导航栏和页脚组件 -->
     <script src="../components/navbar.js"></script>
     <script src="../components/footer.js"></script>
