--- a/tools/markdown-editor.html
+++ b/tools/markdown-editor.html
@@ -6,6 +6,10 @@
     <script src="../components/navbar.js"></script>
     <script src="../components/footer.js"></script>
 
+    <!-- 导航栏和页脚组件 -->
+    <script src="../components/navbar.js"></script>
+    <script src="../components/footer.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Favicon and Icons -->
@@ -422,6 +426,17 @@
     <script>
         // 初始化导航栏和页脚组件
         document.addEventListener('DOMContentLoaded', function() {
+            // 初始化导航栏和页脚组件
+            const navbar = new NavbarComponent();
+            const navbarStyles = document.createElement('style');
+            navbarStyles.textContent = NavbarComponent.getStyles();
+            document.head.appendChild(navbarStyles);
+
+            const footer = new FooterComponent();
+            const footerStyles = document.createElement('style');
+            footerStyles.textContent = FooterComponent.getStyles();
+            document.head.appendChild(footerStyles);
+
             new NavbarComponent();
             new FooterComponent();
 
