--- a/tools/menstrual-cycle-calculator.html
+++ b/tools/menstrual-cycle-calculator.html
@@ -2,6 +2,10 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <!-- 导航栏和页脚组件 -->
+    <script src="../components/navbar.js"></script>
+    <script src="../components/footer.js"></script>
+
     <script src="../components/navbar.js"></script>
     <script src="../components/footer.js"></script>
 
@@ -660,6 +664,17 @@
     <script>
         // 初始化导航栏和页脚组件
         document.addEventListener('DOMContentLoaded', function() {
+            // 初始化导航栏和页脚组件
+            const navbar = new NavbarComponent();
+            const navbarStyles = document.createElement('style');
+            navbarStyles.textContent = NavbarComponent.getStyles();
+            document.head.appendChild(navbarStyles);
+
+            const footer = new FooterComponent();
+            const footerStyles = document.createElement('style');
+            footerStyles.textContent = FooterComponent.getStyles();
+            document.head.appendChild(footerStyles);
+
             new NavbarComponent();
             new FooterComponent();
         });
