增加Cloudflare Web Analytics

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
     <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     
+    <!-- Cloudflare Web Analytics -->
+    <script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"token": "7ce07c493a0f4d95ad110a2118022829"}'></script>
+    <!-- End Cloudflare Web Analytics -->
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/category-styles.css">
     <style>
