--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
     </script>
     
     <!-- Favicon and Icons -->
-    <link rel="icon" type="image/png" href="images/icon-192x192.png">
-    <link rel="apple-touch-icon" sizes="192x192" href="images/icon-192x192.png">
-    <link rel="apple-touch-icon" sizes="512x512" href="images/icon-512x512.png">
+    <link rel="icon" type="image/png" href="images/avatar.jpg">
+    <link rel="apple-touch-icon" sizes="192x192" href="images/avatar.jpg">
+    <link rel="apple-touch-icon" sizes="512x512" href="images/avatar.jpg">
     <link rel="manifest" href="manifest.json">
     
     <!-- Preconnect for Performance -->
