--- a/dep/fortune-stick-drawer-standalone.html
+++ b/dep/fortune-stick-drawer-standalone.html
@@ -8,7 +8,7 @@
     <!-- SEO Meta Tags -->
     <meta name="description" content="专业的在线抽签工具，提供综合运势、事业运势、姻缘运势、学业运势等多种签文。传统文化与现代科技结合，为您指点迷津，解答人生疑惑。">
     <meta name="keywords" content="在线抽签,求签问卜,运势测算,签文解读,传统文化,占卜工具,命理预测">
-    <meta name="author" content="小鹿工具">
+    <meta name="author" content="小路工具">
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="在线抽签工具 - 求签问卜，指点迷津">
