--- a/guide.html
+++ b/guide.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>工具站使用指南 - 小鹿工具箱</title>
-    <meta name="description" content="小鹿工具箱使用指南，帮助您快速上手各种在线工具">
+    <title>工具站使用指南 - 小路工具箱</title>
+    <meta name="description" content="小路工具箱使用指南，帮助您快速上手各种在线工具">
     <link rel="icon" href="images/icon-192x192.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -201,7 +201,7 @@
     <div class="container">
         <div class="guide-header">
             <h1><i class="fas fa-book"></i> 工具站使用指南</h1>
-            <p>快速上手小鹿工具箱，提升您的工作效率</p>
+            <p>快速上手小路工具箱，提升您的工作效率</p>
         </div>
 
         <a href="index.html" class="back-btn">
@@ -212,7 +212,7 @@
         <div class="guide-content">
             <div class="guide-section">
                 <h2><i class="fas fa-rocket"></i> 快速开始</h2>
-                <p>欢迎使用小鹿工具箱！这是一个集成了多种实用工具的在线平台，旨在帮助您提升工作效率。</p>
+                <p>欢迎使用小路工具箱！这是一个集成了多种实用工具的在线平台，旨在帮助您提升工作效率。</p>
                 
                 <div class="step-list">
                     <div class="step-item">
@@ -345,7 +345,7 @@
 
             <div class="guide-section">
                 <h2><i class="fas fa-heart"></i> 支持我们</h2>
-                <p>如果您觉得小鹿工具箱对您有帮助，欢迎：</p>
+                <p>如果您觉得小路工具箱对您有帮助，欢迎：</p>
                 <ul>
                     <li>分享给您的朋友和同事</li>
                     <li>在社交媒体上推荐我们</li>
