调整工具卡片，修复问题，做SEO处理等等

--- a/tools/anime-to-sketch.html
+++ b/tools/anime-to-sketch.html
@@ -45,6 +45,7 @@
     }
     </script>
     
+    <link rel="stylesheet" href="../css/responsive.css">
     <style>
         * {
             margin: 0;
@@ -1628,5 +1629,6 @@
         });
     </script>
     <script src="../components/component-manager.js"></script>
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>
