--- a/tools/excel-visualizer.html
+++ b/tools/excel-visualizer.html
@@ -66,6 +66,7 @@
     <!-- SheetJS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     
+    <link rel="stylesheet" href="../css/responsive.css">
     <style>
         :root {
             --primary: #667eea;
@@ -1588,5 +1589,6 @@
         });
     </script>
     <script src="../components/component-manager.js"></script>
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>
