--- a/tools/menstrual-cycle-calculator.html
+++ b/tools/menstrual-cycle-calculator.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" sizes="512x512" href="../images/icon-512x512.png">
     <link rel="manifest" href="../site.webmanifest">
     
+    <link rel="stylesheet" href="../css/responsive.css">
     <style>
         * {
             margin: 0;
@@ -294,5 +295,6 @@
         });
     </script>
     <script src="../components/component-manager.js"></script>
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>
