--- a/tools/pdf-watermark.html
+++ b/tools/pdf-watermark.html
@@ -225,6 +225,7 @@
     <script src="https://unpkg.com/@pdf-lib/fontkit@1.1.1/dist/fontkit.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
     
+    <link rel="stylesheet" href="../css/responsive.css">
     <style>
         * {
             margin: 0;
@@ -1476,5 +1477,6 @@
         });
     </script>
     <script src="../components/component-manager.js"></script>
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>
