--- a/tools/regex-tester.html
+++ b/tools/regex-tester.html
@@ -44,6 +44,7 @@
     }
     </script>
     
+    <link rel="stylesheet" href="../css/responsive.css">
     <style>
         * {
             margin: 0;
@@ -1488,5 +1489,6 @@ IP地址：192.168.1.1, 10.0.0.1
         }
     </script>
     <script src="../components/component-manager.js"></script>
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>
