--- a/tools/wechat-cover-maker.html
+++ b/tools/wechat-cover-maker.html
@@ -58,6 +58,7 @@
     }
     </script>
     
+    <link rel="stylesheet" href="../css/responsive.css">
     <style>
         :root {
             --primary: #4361ee;
@@ -1603,5 +1604,6 @@
     
     <!-- 组件管理器 -->
     <script src="../components/component-manager.js"></script>
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>
