--- a/tools/zodiac-calculator.html
+++ b/tools/zodiac-calculator.html
@@ -20,6 +20,7 @@
     <meta name="twitter:description" content="免费在线生肖计算器，支持年份查询生肖、生肖查询年份、年龄计算生肖等功能">
     <link rel="canonical" href="https://xiaolu.tools/tools/zodiac-calculator.html">
     
+    <link rel="stylesheet" href="../css/responsive.css">
     <style>
         :root {
             --primary: #4f46e5;
@@ -1149,5 +1150,6 @@
         });
     </script>
     <script src="../components/component-manager.js"></script>
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>
