--- a/tools/api-tester.html
+++ b/tools/api-tester.html
@@ -44,6 +44,7 @@
     }
     </script>
     
+    <link rel="stylesheet" href="../css/responsive.css">
     <style>
         * {
             margin: 0;
@@ -1407,5 +1408,6 @@
         });
     </script>
     <script src="../components/component-manager.js"></script>
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>
