--- a/tools/bmi-calculator.html
+++ b/tools/bmi-calculator.html
@@ -42,6 +42,7 @@
     <!-- Styles -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/responsive.css">
     <style>
         .calculator-section {
             background-color: #f8f9fa;
@@ -102,9 +103,12 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             line-height: 1.6;
             color: #1e293b;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #f8fafc;
             min-height: 100vh;
             overflow-x: hidden;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         
         /* 容器布局修复 */
@@ -113,6 +117,9 @@
             margin: 0 auto;
             padding: 20px;
             width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         
         /* 主布局修复 */
@@ -1021,5 +1028,6 @@
             console.log('BMI计算器已加载');
         });
     </script>
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>
