--- a/tools/chinese-converter.html
+++ b/tools/chinese-converter.html
@@ -63,6 +63,7 @@
     </script>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="../css/responsive.css">
     <style>
         :root {
             --primary: #4361ee;
@@ -1722,5 +1723,6 @@
         });
     </script>
     <script src="../components/component-manager.js"></script>
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>'示
