--- a/tools/content-card-generator.html
+++ b/tools/content-card-generator.html
@@ -58,6 +58,7 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <link rel="stylesheet" href="../css/responsive.css">
     <style>
         :root {
             --primary: #FF2442; /* 小红书主色调 */
@@ -1653,5 +1654,6 @@
         });
     </script>
     <script src="../components/component-manager.js"></script>
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>
