--- a/tools/daily-quote-card.html
+++ b/tools/daily-quote-card.html
@@ -63,6 +63,7 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <link rel="stylesheet" href="../css/responsive.css">
     <style>
         :root {
             --primary: #ff2e63;
@@ -1396,5 +1397,6 @@
         });
     </script>
     <script src="../components/component-manager.js"></script>
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>
