--- a/tools/encoding-converter.html
+++ b/tools/encoding-converter.html
@@ -52,6 +52,7 @@
     }
     </script>
     
+    <link rel="stylesheet" href="../css/responsive.css">
     <style>
         :root {
             --primary: #2563eb;
@@ -1395,5 +1396,6 @@
         });
     </script>
     <script src="../components/component-manager.js"></script>
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>
