--- a/tools/example-tool.html
+++ b/tools/example-tool.html
@@ -9,6 +9,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>示例工具</title>
+    <link rel="stylesheet" href="../css/responsive.css">
     <style>
         .tool-container {
             padding: 20px;
@@ -693,5 +694,6 @@
         });
     </script>
     <script src="../components/component-manager.js"></script>
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>
