--- a/tools/festival-countdown.html
+++ b/tools/festival-countdown.html
@@ -25,5 +25,6 @@
         });
     </script>
     <script src="../components/component-manager.js"></script>
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>
