--- a/tools/file-encryptor.html
+++ b/tools/file-encryptor.html
@@ -64,6 +64,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@zip.js/zip.js@2.7.34/dist/zip.min.js"></script>
+    <link rel="stylesheet" href="../css/responsive.css">
     <style>
         :root {
             --primary: #4361ee;
@@ -1319,5 +1320,6 @@
         });
     </script>
     <script src="../components/component-manager.js"></script>
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>
