--- a/tools/fortune-stick-drawer.html
+++ b/tools/fortune-stick-drawer.html
@@ -49,6 +49,7 @@
     
     
 
+    <link rel="stylesheet" href="../css/responsive.css">
     <style>
         .fortune-container {
             max-width: 800px;
@@ -119,7 +120,7 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             line-height: 1.6;
             color: #1e293b;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: white;
             min-height: 100vh;
             overflow-x: hidden;
         }
@@ -1337,5 +1338,6 @@
     <!-- 页脚容器 -->
     <div id="footer-container"></div>
 
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>
