--- a/tools/image-compressor.html
+++ b/tools/image-compressor.html
@@ -51,6 +51,7 @@
     }
     </script>
     
+    <link rel="stylesheet" href="../css/responsive.css">
     <style>
         :root {
             --primary: #4f46e5;
@@ -474,5 +475,6 @@
         }
     </script>
     <script src="../components/component-manager.js"></script>
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>
