--- a/tools/image-to-base64.html
+++ b/tools/image-to-base64.html
@@ -52,6 +52,7 @@
     }
     </script>
     
+    <link rel="stylesheet" href="../css/responsive.css">
     <style>
         :root {
             --primary: #2563eb;
@@ -1323,5 +1324,6 @@
         });
     </script>
     <script src="../components/component-manager.js"></script>
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>
