--- a/tools/loan-prepayment-calculator.html
+++ b/tools/loan-prepayment-calculator.html
@@ -56,6 +56,7 @@
     }
     </script>
     
+    <link rel="stylesheet" href="../css/responsive.css">
     <style>
         :root {
             --primary: #667eea;
@@ -1455,5 +1456,6 @@
         });
     </script>
     <script src="../components/component-manager.js"></script>
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>
