--- a/tools/watermark-remover.html
+++ b/tools/watermark-remover.html
@@ -52,6 +52,7 @@
     }
     </script>
     
+    <link rel="stylesheet" href="../css/responsive.css">
     <style>
         :root {
             --primary: #007AFF;
@@ -1348,5 +1349,6 @@
         });
     </script>
     <script src="../components/component-manager.js"></script>
+    <script src="../js/mobile-navigation.js"></script>
 </body>
 </html>
