统一管理导航栏和页脚

--- a/tools/bmi-calculator.html
+++ b/tools/bmi-calculator.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>在线BMI计算器 - 体重指数、体脂率计算工具 | 小路工具箱</title>
     <meta name="description" content="免费在线BMI计算器，提供体重指数(BMI)、体脂率、基础代谢率等多项健康指标计算。科学评估身体状况，助您掌握健康数据。">
     <meta name="keywords" content="BMI计算器,体重指数计算,体脂率计算,基础代谢率,健康指标计算,在线计算工具,健康管理">
