--- a/tools/color-converter.html
+++ b/tools/color-converter.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>▶ 颜色转换工具 - 在线HEX RGB HSL颜色格式转换器 | 小路工具</title>
     <meta name="description" content="免费在线颜色转换工具，支持HEX、RGB、HSL、CMYK等多种颜色格式的相互转换，提供颜色预览、调色板和颜色搭配建议。">
     <meta name="keywords" content="颜色转换,HEX转RGB,RGB转HEX,HSL转换,颜色代码,调色板,颜色搭配,在线转换">
