--- a/tools/encoding-converter.html
+++ b/tools/encoding-converter.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>♨ 信息编码转换工具 - 在线多格式编解码转换器 | 小路工具</title>
     <meta name="description" content="免费在线信息编码转换工具，支持Unicode、UTF-8、UTF-16、URL、Base64、MD5、Hex、Gzip等多种格式的编解码转换。快速、安全、免费的编码转换工具。">
     <meta name="keywords" content="编码转换,Unicode,UTF-8,UTF-16,URL编码,Base64,MD5,Hex,Gzip,在线转换,编解码">
