--- a/tools/language-converter.html
+++ b/tools/language-converter.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>在线语言转换工具 - 多语言翻译、拼音转换、方言互译 | 小路工具箱</title>
     <meta name="description" content="免费在线语言转换工具，支持汉字转拼音、多国语言互译、方言转换。提供准确的翻译结果，适用于学习、交流、商务等场景。">
     <meta name="keywords" content="语言转换,在线翻译,拼音转换,方言转换,多语言翻译,普通话转方言,方言转普通话,免费翻译工具">
