--- a/tools/menstrual-cycle-calculator.html
+++ b/tools/menstrual-cycle-calculator.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>月经周期计算器 - 生理期预测工具 | 小路工具箱</title>
     <meta name="description" content="专业的月经周期计算器，帮助女性准确预测生理期、排卵期和安全期。科学计算，贴心提醒，关爱女性健康。">
     <meta name="keywords" content="月经周期计算器,生理期计算,排卵期计算,安全期计算,女性健康,生理期预测">
