--- a/tools/random-password-generator.html
+++ b/tools/random-password-generator.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>随机密码生成器 - 安全可靠的密码生成工具 | 小路工具箱</title>
     <meta name="description" content="专业的在线随机密码生成器，支持自定义密码长度、字符类型，生成高强度、安全可靠的密码，完全免费使用。">
     <meta name="keywords" content="密码生成器,随机密码,密码生成工具,密码安全,在线工具,密码强度检测">
