--- a/tools/relative-calculator.html
+++ b/tools/relative-calculator.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>亲戚关系计算器 - 称呼查询工具 | 小路工具箱</title>
     <meta name="description" content="专业的亲戚关系计算器，快速查询各种亲戚称呼，支持复杂家庭关系计算，让您轻松掌握正确的称呼方式。">
     <meta name="keywords" content="亲戚关系计算器,称呼查询,家庭关系,亲戚称呼,关系计算">
@@ -254,5 +253,9 @@
     </script>
     <script src="../components/component-manager.js"></script>
     <script src="../js/mobile-navigation.js"></script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {});
+    </script>
 </body>
 </html>
