--- a/tools/timestamp-converter.html
+++ b/tools/timestamp-converter.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>♖ 时间戳转换工具 - 在线时间戳与本地时间转换器 | 小路工具</title>
     <meta name="description" content="免费在线时间戳转换工具，支持秒/毫秒时间戳与本地时间的相互转换，支持世界时区切换和各时区时钟展示。快速、准确、免费的时间转换工具。">
     <meta name="keywords" content="时间戳转换,Unix时间戳,时间转换,世界时区,时钟,在线转换,毫秒时间戳,秒时间戳">
