--- a/tools/api-tester.html
+++ b/tools/api-tester.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- SEO优化 -->
     <title>简易版Postman - 在线API接口测试工具 | 支持GET/POST/HEAD请求和JSON格式化</title>
