--- a/tools/code-beautifier.html
+++ b/tools/code-beautifier.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- SEO优化 -->
     <title>代码美化工具 - 在线代码格式化 | 支持JavaScript、CSS、HTML、XML、SQL等多语言</title>
