--- a/tools/image-compressor.html
+++ b/tools/image-compressor.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>智能图片压缩工具 - 高效压缩，保持清晰度 | 小路工具箱</title>
     <meta name="description" content="专业的在线图片压缩工具，支持批量压缩JPG、PNG、WebP等格式，智能算法保持图片清晰度，自定义压缩率，完全免费使用。">
     <meta name="keywords" content="图片压缩,在线压缩,批量压缩,JPG压缩,PNG压缩,WebP压缩,图片优化,文件大小压缩">
