--- a/tools/image-to-base64.html
+++ b/tools/image-to-base64.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>图片转Base64编码工具 - 在线图片Base64编码解码转换器 | 小路工具</title>
     <meta name="description" content="免费在线图片转Base64编码工具，支持多种图片格式转换，包括链接粘贴、截图粘贴、文件上传等多种方式，同时支持Base64数据逆转图片。快速、安全、免费的图片编码转换工具。">
     <meta name="keywords" content="图片转Base64,Base64编码,图片编码,在线转换,图片解码,Base64转图片,图片工具,编码转换">
