--- a/tools/markdown-editor.html
+++ b/tools/markdown-editor.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Markdown编辑器 - 小路工具箱</title>
     
     <!-- Favicon and Icons -->
