--- a/tools/regex-tester.html
+++ b/tools/regex-tester.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- SEO优化 -->
     <title>JS正则表达式工具 - 在线正则测试器 | 实时匹配高亮显示</title>
