--- a/tools/template.html
+++ b/tools/template.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>工具模板 - 开发模板 | 小路工具箱</title>
     <meta name="description" content="工具开发模板，用于快速创建新的在线工具。">
     <meta name="keywords" content="工具模板,开发模板,在线工具">
